# enkra-calendar

./: .gitignore  LICENSE  Makefile.toml  README.md  pubspec.yaml
android/app/: build.gradle
android/app/src/debug/: AndroidManifest.xml
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/example/calendar_demo/: MainActivity.kt
android/app/src/main/kotlin/io/enkra/calendar/: MainActivity.kt
android/app/src/main/res/xml/: backup_rules.xml
android/app/src/profile/: AndroidManifest.xml
ios/: Podfile
ios/Flutter/: Common.xcconfig  Debug.xcconfig  Release.xcconfig
ios/Runner/: AppDelegate.swift  Info.plist  Runner-Bridging-Header.h
ios/Runner.xcodeproj/: project.pbxproj
lib/: calendar.dart  date.dart  main.dart  native.dart  storage.dart  theme.dart
lib/pages/: calendar.dart  common.dart  detail.dart  drawer.dart  editing.dart  inbox.dart  license.dart  tab_page.dart  util.dart
native/: Cargo.toml  build.rs
native/ios-swift/: Package.swift
native/ios-swift/src/: lib.swift
native/src/: calendar_db.rs  device_kms.rs  lib.rs  secure_local_storage.rs
native/src/device_kms/: android.rs  desktop.rs  empty_aead.rs  fallback.rs  ios.rs  ios_secure_enclave.rs  mod.rs
test/: widget_test.dart
